--- a/src/.vuepress/public/leetcode/index/leetcode.html
+++ b/src/.vuepress/public/leetcode/index/leetcode.html
@@ -7,12 +7,33 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
 	<style>
 		body {
-			background: linear-gradient(135deg, #0f2027 0%, #2c5364 100%);
+			background: radial-gradient(circle at 20% 30%, #ff512f 0%, #dd2476 40%, #0f2027 100%);
 			font-family: 'Montserrat', sans-serif;
 			margin: 0;
 			color: #fff;
 			min-height: 100vh;
 			overflow-x: hidden;
+		}
+		.nav {
+			width: 100%;
+			background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
+			box-shadow: 0 2px 12px #0003;
+			padding: 16px 0;
+			text-align: center;
+			font-size: 1.2em;
+			letter-spacing: 2px;
+			font-weight: bold;
+			color: #fff;
+			margin-bottom: 18px;
+			position: sticky;
+			top: 0;
+			z-index: 10;
+			border-bottom: 2px solid #fff2;
+			animation: navFadeIn 1s;
+		}
+		@keyframes navFadeIn {
+			0% { opacity: 0; transform: translateY(-30px); }
+			100% { opacity: 1; transform: translateY(0); }
 		}
 		.container {
 			max-width: 1200px;
@@ -27,7 +48,14 @@
 			text-shadow: 0 4px 24px #000a, 0 1px 0 #fff3;
 			background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
 			-webkit-background-clip: text;
+			background-clip: text;
 			-webkit-text-fill-color: transparent;
+			text-fill-color: transparent;
+			animation: titlePop 1.2s cubic-bezier(.68,-0.55,.27,1.55);
+		}
+		@keyframes titlePop {
+			0% { opacity: 0; transform: scale(0.8); }
+			100% { opacity: 1; transform: scale(1); }
 		}
 		.search-bar {
 			display: flex;
@@ -44,88 +72,110 @@
 			background: #fff1;
 			color: #fff;
 			box-shadow: 0 2px 12px #0003;
-			transition: background 0.2s, color 0.2s;
+			transition: background 0.2s, color 0.2s, box-shadow 0.2s;
 		}
 		.search-bar input:focus, .search-bar select:focus {
 			background: #fff3;
 			color: #ff512f;
+			box-shadow: 0 4px 16px #ff512f44;
 		}
 		.card-list {
 			display: grid;
 			grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-			gap: 32px;
+			gap: 40px;
 		}
 		.card {
 			background: linear-gradient(120deg, #ff512f 0%, #dd2476 100%);
-			border-radius: 20px;
-			box-shadow: 0 8px 32px #0007, 0 1.5px 0 #fff2;
-			padding: 32px 28px 48px 28px;
-			transition: transform 0.25s, box-shadow 0.25s;
+			border-radius: 24px;
+			box-shadow: 0 12px 48px #dd2476cc, 0 2px 0 #fff5;
+			padding: 36px 32px 56px 32px;
+			transition: transform 0.25s, box-shadow 0.25s, border 0.3s;
 			position: relative;
 			overflow: hidden;
 			animation: floatIn 0.7s cubic-bezier(.68,-0.55,.27,1.55);
+			border: 3px solid transparent;
 		}
 		@keyframes floatIn {
 			0% { opacity: 0; transform: translateY(40px) scale(0.95); }
 			100% { opacity: 1; transform: translateY(0) scale(1); }
 		}
 		.card:hover {
-			transform: translateY(-12px) scale(1.04) rotate(-1deg);
-			box-shadow: 0 16px 48px #dd2476cc, 0 2px 0 #fff5;
+			transform: translateY(-16px) scale(1.05) rotate(-1deg);
+			box-shadow: 0 24px 64px #ff512f99, 0 2px 0 #fff5;
+			border: 3px solid #fff6;
 		}
 		.card-title {
-			font-size: 1.5em;
+			font-size: 1.6em;
 			font-weight: bold;
-			margin-bottom: 10px;
+			margin-bottom: 12px;
 			background: linear-gradient(90deg, #fff 0%, #ffe0e0 100%);
 			-webkit-background-clip: text;
+			background-clip: text;
 			-webkit-text-fill-color: transparent;
+			text-fill-color: transparent;
+			letter-spacing: 1px;
+			animation: cardTitlePop 0.8s;
+		}
+		@keyframes cardTitlePop {
+			0% { opacity: 0; transform: scale(0.9); }
+			100% { opacity: 1; transform: scale(1); }
 		}
 		.card-meta {
 			font-size: 1em;
-			margin-bottom: 16px;
+			margin-bottom: 18px;
 			color: #ffe0e0;
 			text-shadow: 0 1px 0 #0002;
 		}
 		.card-tags {
-			margin-bottom: 14px;
+			margin-bottom: 16px;
 		}
 		.tag {
 			display: inline-block;
 			background: linear-gradient(90deg, #fff2 0%, #ff512f 100%);
 			color: #fff;
-			border-radius: 8px;
-			padding: 4px 14px;
-			font-size: 0.95em;
-			margin-right: 8px;
-			margin-bottom: 4px;
-			box-shadow: 0 1px 4px #0002;
-			transition: background 0.2s;
+			border-radius: 10px;
+			padding: 5px 16px;
+			font-size: 1em;
+			margin-right: 10px;
+			margin-bottom: 5px;
+			box-shadow: 0 2px 8px #ff512f33;
+			transition: background 0.2s, transform 0.2s;
+			cursor: pointer;
+			animation: tagFadeIn 0.7s;
+		}
+		@keyframes tagFadeIn {
+			0% { opacity: 0; transform: scale(0.8); }
+			100% { opacity: 1; transform: scale(1); }
 		}
 		.tag:hover {
 			background: linear-gradient(90deg, #dd2476 0%, #ff512f 100%);
+			transform: scale(1.08);
 		}
 		.card-desc {
-			font-size: 1.08em;
+			font-size: 1.12em;
 			color: #fff;
 			text-shadow: 0 1px 0 #0002;
+			line-height: 1.7;
 		}
 		.card a {
 			position: absolute;
-			right: 24px;
-			bottom: 24px;
+			right: 28px;
+			bottom: 28px;
 			color: #fff;
 			text-decoration: underline;
-			font-size: 1em;
+			font-size: 1.08em;
 			background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
-			border-radius: 8px;
-			padding: 4px 12px;
-			box-shadow: 0 1px 8px #0002;
-			transition: background 0.2s;
+			border-radius: 10px;
+			padding: 6px 16px;
+			box-shadow: 0 2px 12px #dd2476cc;
+			transition: background 0.2s, color 0.2s;
+			font-weight: bold;
+			letter-spacing: 1px;
 		}
 		.card a:hover {
 			background: linear-gradient(90deg, #fff 0%, #ff512f 100%);
 			color: #dd2476;
+			text-shadow: 0 1px 0 #fff6;
 		}
 		@media (max-width: 600px) {
 			.container { padding: 8px; }
@@ -135,7 +185,8 @@
 		}
 	</style>
 </head>
-<body>
+</body>
+	<div class="nav">Leetcode Notes 炫酷查询</div>
 	<div class="container">
 		<h1>Leetcode 专题查询</h1>
 		<div class="search-bar">
@@ -151,7 +202,10 @@
 	</div>
 	<script src="./leetcode-index.js"></script>
 	<script>
-		// 等待 window.LEETCODE_INDEX 加载
+		function getHtmlUrl(mdUrl) {
+			// 修正为 github pages 地址
+			return `https://houbb.github.io/leetcode-notes/posts/leetcode/${mdUrl.replace(/\.md$/, '.html')}`;
+		}
 		function initLeetcodePage() {
 			const data = window.LEETCODE_INDEX || [];
 			const categories = [...new Set(data.flatMap(d => d.categories))];
@@ -186,7 +240,7 @@
 						<div class="card-meta">${item.date} | 分类: ${item.categories.join(', ')}</div>
 						<div class="card-tags">${item.tags.map(t => `<span class='tag'>${t}</span>`).join('')}</div>
 						<div class="card-desc">${item.desc}</div>
-						<a href="./leetcode/${item.url}" target="_blank">查看原文</a>
+						<a href="${getHtmlUrl(item.url)}" target="_blank">查看原文</a>
 					`;
 					cardList.appendChild(card);
 				});
