--- a/src/.vuepress/public/leetcode/index/leetcode.html
+++ b/src/.vuepress/public/leetcode/index/leetcode.html
@@ -7,12 +7,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
 	<style>
 		body {
-			background: radial-gradient(circle at 20% 30%, #ff512f 0%, #dd2476 40%, #0f2027 100%);
-			font-family: 'Montserrat', sans-serif;
+			min-height: 100vh;
 			margin: 0;
 			color: #fff;
-			min-height: 100vh;
+			font-family: 'Montserrat', sans-serif;
 			overflow-x: hidden;
+			/* 七彩星空梦幻背景 */
+			background: linear-gradient(135deg, #0f2027 0%, #a1c4fd 20%, #c2e9fb 40%, #fbc2eb 60%, #fd6e6a 80%, #f7797d 100%);
+			position: relative;
+		}
+		/* 星空粒子动画 */
+		.star-bg {
+			position: fixed;
+			left: 0; top: 0; width: 100vw; height: 100vh;
+			pointer-events: none;
+			z-index: 0;
 		}
 		.nav {
 			width: 100%;
@@ -39,14 +48,16 @@
 			max-width: 1200px;
 			margin: 40px auto;
 			padding: 20px;
+			position: relative;
+			z-index: 2;
 		}
 		h1 {
 			text-align: center;
 			font-size: 3em;
 			margin-bottom: 30px;
 			letter-spacing: 3px;
-			text-shadow: 0 4px 24px #000a, 0 1px 0 #fff3;
-			background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
+			text-shadow: 0 4px 24px #fff8, 0 1px 0 #fff3;
+			background: linear-gradient(90deg, #f7971e 0%, #ffd200 20%, #f7797d 40%, #a1c4fd 60%, #c2e9fb 80%, #fd6e6a 100%);
 			-webkit-background-clip: text;
 			background-clip: text;
 			-webkit-text-fill-color: transparent;
@@ -79,40 +90,53 @@
 			color: #ff512f;
 			box-shadow: 0 4px 16px #ff512f44;
 		}
+		.search-bar a.back-home {
+			display: inline-block;
+			margin-left: 16px;
+			padding: 6px 18px;
+			font-size: 1em;
+			color: #e0e0e0;
+			background: linear-gradient(90deg, #232946 0%, #a1c4fd 100%);
+			border-radius: 12px;
+			text-decoration: none;
+			box-shadow: 0 1px 4px #a1c4fd33;
+			transition: background 0.2s, color 0.2s;
+		}
+		.search-bar a.back-home:hover {
+			background: linear-gradient(90deg, #232946 0%, #fd6e6a 100%);
+			color: #fff;
+		}
 		.card-list {
 			display: grid;
-			grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-			gap: 40px;
+			grid-template-columns: repeat(4, 1fr);
+			gap: 24px;
 		}
 		.card {
-			background: linear-gradient(120deg, #ff512f 0%, #dd2476 100%);
-			border-radius: 24px;
-			box-shadow: 0 12px 48px #dd2476cc, 0 2px 0 #fff5;
-			padding: 36px 32px 56px 32px;
-			transition: transform 0.25s, box-shadow 0.25s, border 0.3s;
+			background: rgba(255,255,255,0.08);
+			border-radius: 14px;
+			box-shadow: 0 2px 12px #0002;
+			padding: 18px 14px 32px 14px;
+			transition: transform 0.18s, box-shadow 0.18s, border 0.2s;
 			position: relative;
 			overflow: hidden;
 			animation: floatIn 0.7s cubic-bezier(.68,-0.55,.27,1.55);
-			border: 3px solid transparent;
+			border: 1.5px solid #fff2;
+			min-width: 0;
 		}
 		@keyframes floatIn {
 			0% { opacity: 0; transform: translateY(40px) scale(0.95); }
 			100% { opacity: 1; transform: translateY(0) scale(1); }
 		}
 		.card:hover {
-			transform: translateY(-16px) scale(1.05) rotate(-1deg);
-			box-shadow: 0 24px 64px #ff512f99, 0 2px 0 #fff5;
-			border: 3px solid #fff6;
+			transform: translateY(-6px) scale(1.03);
+			box-shadow: 0 8px 24px #a1c4fd88;
+			border: 1.5px solid #ffd200;
 		}
 		.card-title {
-			font-size: 1.6em;
+			font-size: 1.1em;
 			font-weight: bold;
-			margin-bottom: 12px;
-			background: linear-gradient(90deg, #fff 0%, #ffe0e0 100%);
-			-webkit-background-clip: text;
-			background-clip: text;
-			-webkit-text-fill-color: transparent;
-			text-fill-color: transparent;
+			margin-bottom: 10px;
+			color: #fff;
 			letter-spacing: 1px;
 			animation: cardTitlePop 0.8s;
 		}
@@ -121,72 +145,141 @@
 			100% { opacity: 1; transform: scale(1); }
 		}
 		.card-meta {
-			font-size: 1em;
-			margin-bottom: 18px;
-			color: #ffe0e0;
-			text-shadow: 0 1px 0 #0002;
+			font-size: 0.95em;
+			margin-bottom: 12px;
+			color: #e0e0e0;
+			text-shadow: 0 1px 0 #0001;
 		}
 		.card-tags {
-			margin-bottom: 16px;
+			margin-bottom: 10px;
 		}
 		.tag {
 			display: inline-block;
-			background: linear-gradient(90deg, #fff2 0%, #ff512f 100%);
-			color: #fff;
-			border-radius: 10px;
-			padding: 5px 16px;
-			font-size: 1em;
-			margin-right: 10px;
-			margin-bottom: 5px;
-			box-shadow: 0 2px 8px #ff512f33;
-			transition: background 0.2s, transform 0.2s;
+			background: linear-gradient(90deg, #e0eafc 0%, #cfdef3 100%);
+			color: #232946;
+			border-radius: 12px;
+			padding: 3px 12px;
+			font-size: 0.93em;
+			margin-right: 7px;
+			margin-bottom: 4px;
+			box-shadow: 0 1px 6px #a1c4fd33, 0 0 8px 2px #a1c4fd22 inset;
+			border: 1px solid #a1c4fd33;
+			transition: background 0.2s, color 0.2s, box-shadow 0.2s;
 			cursor: pointer;
 			animation: tagFadeIn 0.7s;
+			opacity: 0.92;
 		}
 		@keyframes tagFadeIn {
 			0% { opacity: 0; transform: scale(0.8); }
 			100% { opacity: 1; transform: scale(1); }
 		}
 		.tag:hover {
-			background: linear-gradient(90deg, #dd2476 0%, #ff512f 100%);
-			transform: scale(1.08);
+			background: linear-gradient(90deg, #a1c4fd 0%, #fd6e6a 100%);
+			color: #fff;
+			box-shadow: 0 2px 12px #fd6e6a44, 0 0 12px 2px #a1c4fd44 inset;
+			opacity: 1;
 		}
 		.card-desc {
-			font-size: 1.12em;
-			color: #fff;
-			text-shadow: 0 1px 0 #0002;
-			line-height: 1.7;
+			font-size: 0.98em;
+			color: #f8f8f8;
+			text-shadow: 0 1px 0 #0001;
+			line-height: 1.6;
 		}
 		.card a {
 			position: absolute;
-			right: 28px;
-			bottom: 28px;
-			color: #fff;
+			right: 18px;
+			bottom: 18px;
+			color: #e0e0e0;
 			text-decoration: underline;
-			font-size: 1.08em;
-			background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
-			border-radius: 10px;
-			padding: 6px 16px;
-			box-shadow: 0 2px 12px #dd2476cc;
+			font-size: 0.93em;
+			background: linear-gradient(90deg, #232946 0%, #a1c4fd 100%);
+			border-radius: 7px;
+			padding: 4px 10px;
+			box-shadow: 0 1px 3px #a1c4fd33;
 			transition: background 0.2s, color 0.2s;
-			font-weight: bold;
-			letter-spacing: 1px;
+			font-weight: normal;
+			letter-spacing: 0.5px;
 		}
 		.card a:hover {
-			background: linear-gradient(90deg, #fff 0%, #ff512f 100%);
-			color: #dd2476;
-			text-shadow: 0 1px 0 #fff6;
+			background: linear-gradient(90deg, #232946 0%, #fd6e6a 100%);
+			color: #fff;
+		}
+		@media (max-width: 900px) {
+			.card-list { grid-template-columns: repeat(2, 1fr); }
 		}
 		@media (max-width: 600px) {
 			.container { padding: 8px; }
 			h1 { font-size: 2em; }
-			.card-list { grid-template-columns: 1fr; gap: 18px; }
-			.card { padding: 18px 10px 38px 10px; }
+			.card-list { grid-template-columns: 1fr; gap: 12px; }
+			.card { padding: 10px 6px 24px 6px; }
+		}
+
+		footer {
+			margin-top: 3rem;
+			padding: 2rem 1rem;
+			background: rgba(0,0,0,0.7);
+			text-align: center;
+			color: #ccc;
+		}
+		footer img {
+			max-height: 150px;
+			margin: 0 10px;
+			vertical-align: middle;
+			transition: transform 0.3s;
+			border-radius: 8px;
+		}
+		footer img:hover {
+			transform: scale(1.1) rotate(5deg);
+		}
+		footer .slogan {
+			margin-top: 1rem;
+			font-size: 1rem;
+			color: #eee;
 		}
 	</style>
+	<script>
+	// 星空粒子动画
+	document.addEventListener('DOMContentLoaded', function() {
+		const starBg = document.createElement('canvas');
+		starBg.className = 'star-bg';
+		document.body.appendChild(starBg);
+		const ctx = starBg.getContext('2d');
+		function resize() {
+			starBg.width = window.innerWidth;
+			starBg.height = window.innerHeight;
+		}
+		resize();
+		window.addEventListener('resize', resize);
+		// 生成星星
+		const stars = Array.from({length: 120}, () => ({
+			x: Math.random(),
+			y: Math.random(),
+			r: Math.random() * 1.2 + 0.6,
+			c: `hsl(${Math.random()*360},100%,85%)`,
+			dx: (Math.random()-0.5)*0.0005,
+			dy: (Math.random()-0.5)*0.0005
+		}));
+		function draw() {
+			ctx.clearRect(0,0,starBg.width,starBg.height);
+			stars.forEach(s => {
+				ctx.beginPath();
+				ctx.arc(s.x*starBg.width, s.y*starBg.height, s.r, 0, 2*Math.PI);
+				ctx.fillStyle = s.c;
+				ctx.shadowColor = s.c;
+				ctx.shadowBlur = 12;
+				ctx.fill();
+				s.x += s.dx;
+				s.y += s.dy;
+				if(s.x<0||s.x>1) s.dx*=-1;
+				if(s.y<0||s.y>1) s.dy*=-1;
+			});
+			requestAnimationFrame(draw);
+		}
+		draw();
+	});
+	</script>
 </head>
 </body>
-	<div class="nav">Leetcode Notes 炫酷查询</div>
 	<div class="container">
 		<h1>Leetcode 专题查询</h1>
 		<div class="search-bar">
@@ -197,9 +290,19 @@
 			<select id="tagSelect">
 				<option value="">全部标签</option>
 			</select>
+			<a class="back-home" href="https://houbb.github.io">返回首页</a>
 		</div>
 		<div class="card-list" id="cardList"></div>
 	</div>
+
+  <footer>
+    <div class="slogan" style="margin-bottom: 10px;">💡 技术改变世界 | 思考引领未来</div>
+    <div>
+      <img src="https://houbb.github.io/tools/lmxxf_logo.png" alt="Logo">
+      <img src="https://houbb.github.io/tools/lmxxf_reword.png" alt="Reward">
+    </div>
+  </footer>	
+
 	<script src="./leetcode-index.js"></script>
 	<script>
 		function getHtmlUrl(mdUrl) {
